# gurftron

./: .env  .gitignore  README.md  babel.config.json  package.json  tailwind.config.js  webpack.config.js
.github/: copilot-instructions.md
contracts/: Gurftron.cairo  Scarb.toml
contracts/src/: g_utils.cairo  gurftron_db.cairo  lib.cairo  tests.cairo
gurftron-server/: server.js
program/guftron_engine/: Cargo.toml  README.md
program/guftron_engine/src/: llm_engine.rs  main.rs
program/gurftron_engine/: Cargo.toml  README.md
program/gurftron_engine/src/: llm_engine.rs  main.rs
src/: background.js  bundle.css  content.js  contract-writer.js  dashboard.html  dashboard.js  dexieStorage.js  gurftron.js  install.js  login.html  results.css  results.html  results.js  settings.html  starknet.js  ui-helpers.js
