[package]
name = "gurftron_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "6"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
indicatif = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
llama-cpp-2 = "0.1.122"
num_cpus = "1.16"
once_cell = "1.19"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"